can put user info in console log

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
 
 <body>
   <app-root></app-root>
+  <script src="https://unpkg.com/@ionic/core@latest/dist/ionic.js"></script>
 </body>
 
 </html>
