--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 
 <body>
   <app-root></app-root>
-  <script src="https://unpkg.com/@ionic/core@latest/dist/ionic.js"></script>
+  <script src="https://unpkg.com/browse/@ionic/core@5.5.0/dist/ionic/ionic.js"></script>
 </body>
 
 </html>
